crates/ir/tests/snapshots/lower_test__traits__builtin_trait_dict.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__builtin_trait_dict

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn apply_combine(v0: Dict[core/semigroup.Semigroup, s8], v1: s8, v2: s8) -> s8 =
  let v3: s8 = trait_call core/semigroup.Semigroup.combine(v0, v1, v2)
  v3

fn main() -> Unit =
  let v5: Dict[core/semigroup.Semigroup, Int] = get_dict core/semigroup.Semigroup[Int]
  let v6: Int = call apply_combine(v5, 3, 5)
  let v4: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Unit = call println(v4, v6)
  v7
