crates/ir/tests/snapshots/lower_test__traits__constrained_fn_ref_local.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__constrained_fn_ref_local

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/io/println as println(s): Unit
declare println: (s) -> Unit

fn show_it(v0: Dict[core/show.Show, k9], v1: k9) -> String =
  let v2: String = trait_call core/show.Show.show(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: (Int) -> String = make_closure(fn_ref$27, [v4])
  let_join v14(v12: Bool) =
    let v8: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v13: Unit = call println(v8, v12)
    v13
  in
  let v9: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v10: String = call_closure v3(42)
  let v11: Bool = trait_call core/eq.Eq.eq(v9, v10, "42")
  jump v14(v11)

fn fn_ref$27(v5: Dict[core/show.Show, Int], v6: Int) -> String =
  let v7: String = call show_it(v5, v6)
  v7
