crates/ir/tests/snapshots/lower_test__traits__constrained_fn_ref_type_app.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__constrained_fn_ref_type_app

declare println: (Dict, m) -> Unit
declare show: (Dict, g) -> String

fn show_it(v0: Dict, v1: r7) -> String =
  let v2: String = call show(v0, v1)
  v2

fn main() -> Unit =
  let v3: (String) -> String = make_closure(show_it, [])
  let v5: String = call_closure v3("hello")
  let v6: Bool = eq_string(v5, "hello")
  let v4: Dict = get_dict Show[Bool]
  let v7: Unit = call println(v4, v6)
  v7
