crates/ir/tests/snapshots/lower_test__traits__constrained_instance_multi_bound_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__constrained_instance_multi_bound_ok

type Pair[a, b] = Pair#0(a, b)
declare eq: (Dict, g, g) -> Bool
declare println: (m) -> Unit
declare show: (Dict, g) -> String

fn main() -> Unit =
  let_join v9(v7: Bool) =
    let v8: Unit = call println(v7)
    v8
  in
  let v0: Dict = get_dict Eq[String]
  let v1: ~Pair[Int, String] = construct Pair::Pair#0(1, "ok")
  let v2: Dict = get_dict Eq[Int]
  let v3: Dict = get_dict Show[String]
  let v4: Dict = make_dict Show[Pair[Int, String]](v2, v3)
  let v5: String = call show(v4, v1)
  let v6: Bool = call eq(v0, v5, "pair")
  jump v9(v6)
