crates/ir/tests/snapshots/lower_test__traits__constrained_instance_unconstrained_regression.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__constrained_instance_unconstrained_regression

type Box = Box#0(Int)
instance core/show.Show[Box] { show=Show$$Box$$show }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn main() -> Unit =
  let_join v8(v6: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v7: Unit = call println(v0, v6)
    v7
  in
  let v1: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v2: ~Box = construct Box::Box#0(1)
  let v3: Dict[core/show.Show, Box] = get_dict core/show.Show[Box]
  let v4: String = trait_call core/show.Show.show(v3, v2)
  let v5: Bool = trait_call core/eq.Eq.eq(v1, v4, "box")
  jump v8(v5)

fn Show$$Box$$show(v9: Box) -> ~String =
  "box"
